<resources>
    <string name="app_name">Snezhok</string>

    <string name="report_win">Good job!</string>
    <string name="report_lose">Crushed!</string>
    <string name="report_game_over">Congrats!</string>
    <string name="report_tap">Tap to continue</string>
    <string name="report_tap_game_over">Thanks for playing</string>

    <string name="menu_level">level</string>
    <string name="menu_button_restart">&#160;RESTART&#160;</string>
    <string name="menu_button_reset">RESET</string>
    <string name="menu_button_about">ABOUT</string>

    <string name="reset_title">Reset</string>
    <string name="reset_message">Are you sure that you want to start from the 1st level?</string>
    <string name="reset_button_yes">Yes</string>
    <string name="reset_button_no">No</string>

    <string name="about_caption">ABOUT</string>
    <string name="about_text">
        Manipulate your snowball by swiping in one of four directions.
        Snowball will keep rolling until it bumps into a wall or another snowball of same or larger size.\n\n
        There also are tiles with snow.
        Snowballs become larger when they roll through such tiles.\n\n
        If your snowball is larger than another, you can crush it!
        At the same time your own snowball will be enlarged.
        But be careful: yours can be crushed by any larger snowball too.\n\n
        Purpose is to crush all other snowballs and stay alive.
        Hope you will like it.\n\n
        Enjoy!
    </string>
    <string name="about_link">Rate this app &#160;&#160;</string>
</resources>