<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/image_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ContentDescription"/>
    <com.alex_aladdin.snowball.GameView
        android:id="@+id/game_view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@id/game_view"
        android:layout_toStartOf="@id/game_view">
        <TextView
            android:id="@+id/level_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:textColor="@color/colorText"
            android:includeFontPadding="false"
            android:layout_marginBottom="-20dp"/>
        <com.alex_aladdin.snowball.AutoFitTextView
            android:id="@+id/level_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/level_number"
            android:gravity="center_horizontal"
            android:textSize="300sp"
            android:textColor="@color/colorText"
            android:includeFontPadding="false"
            android:text="@string/menu_level"/>
        <Button
            android:id="@+id/button_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@drawable/button_text_color"
            android:text="@string/menu_button_about"
            android:onClick="onClickAbout"/>
        <Button
            android:id="@+id/button_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/button_about"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@drawable/button_text_color"
            android:text="@string/menu_button_reset"
            android:onClick="onClickReset"/>
        <com.alex_aladdin.snowball.AutoFitButton
            android:id="@+id/button_restart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/button_reset"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="300sp"
            android:textColor="@drawable/button_text_color"
            android:text="@string/menu_button_restart"
            android:onClick="onClickRestart"/>
    </RelativeLayout>
</RelativeLayout>